# tag-lang

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/: 1-hello-world.tag  2-variable.tag  3-macros.tag  4-dynamic.tag  5-dynamic-macros.tag  6-overloading.tag  test.mctag
src/: errors.rs  generation.rs  main.rs  parser.rs
src/data/: bootstrap.tag  pack.mcmeta
src/generator/: command.rs  condition.rs  datapack.rs  expression.rs  function.rs  mod.rs  scopes.rs  simplify.rs  statement.rs  staticness.rs  typing.rs
src/generator/features/: command.rs  condition.rs  expression.rs  function.rs  mod.rs  statement.rs
src/parser/: expression.rs  function.rs  mod.rs  shunting_yard.rs  statement.rs  typing.rs
