[package]
name = "tag-lang"
version = "0.1.0"
authors = ["samipourquoi <sami.guiderdoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
nom-greedyerror = "0.3.1"
nom_locate = "3.0.2"
termion = "1.5.6"
clap = "2.33.3"